--- a/shop_list.html
+++ b/shop_list.html
@@ -14,12 +14,13 @@
         }
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: #fff;
+            background-color: #faf3e0; /* Light Beige */
             color: #333;
             line-height: 1.6;
-            margin: 0 auto; /* Add this line */
-           
-            
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+            margin: 0;
         }
         html, body {
             min-height: 100vh;
