--- a/shop_list.html
+++ b/shop_list.html
@@ -43,11 +43,11 @@
             padding: 20px 0;
         }
         .container {
-            width: 80%;
+                width: 80%;
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
-            
+            flex: 1;
         }
 
         
@@ -55,7 +55,6 @@
         h1 {
             font-size: 2.5rem;
             text-align: center;
-            color: #444;
             color: #333;
             margin-bottom: 30px;
         }
@@ -121,15 +120,15 @@
             text-align: center;
             padding: 30px 0;
         }
-       /* Footer
        footer {
             background-color: #333;
             color: white;
             text-align: center;
             padding: 20px 0;
+            width: 100%;
+            margin-top: auto;
         }
 
-     */
 
         footer a {
             color: #f1f1f1;
