--- a/shop_list.html
+++ b/shop_list.html
@@ -116,7 +116,7 @@
             color: #666;
         }
         header {
-            background-color: #fff;
+            background-color: #faf3e0;
             text-align: center;
             padding: 30px 0;
         }
