--- a/gen-meals.html
+++ b/gen-meals.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meal Planner</title>
     <style>
+         * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
         body {
             font-family: Arial, sans-serif;
             background-color: #faf3e0;
@@ -13,7 +18,8 @@
         }
 
         .container {
-            max-width: 800px;
+            width: 80%;
+            max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
         }
@@ -158,7 +164,6 @@
             color: white;
             text-align: center;
             padding: 20px 0;
-            margin-top: 40px;
         }
 
         footer a {
