--- a/saved.html
+++ b/saved.html
@@ -72,7 +72,7 @@
         }
 
         .meal .toggle-btn.active {
-            background-color: #28a745;
+            background-color: rgb(0, 117, 23);
         }
 
         .ingredients, .more-info {
