--- a/shop_list.html
+++ b/shop_list.html
@@ -307,7 +307,12 @@
             margin-bottom: 30px;
         }
         #shopping-list {
-            margin-top: 20px;
+             display: flex;
+    flex-direction: column; /* Stack items vertically */
+    justify-content: center; /* Center items horizontally */
+    align-items: center; /* Center items vertically */
+    text-align: center; /* Center text within the container */
+    min-height: 200px;
         }
         #shopping-list button {
     background-color: #6a9a3c; /* Initial background color */
