--- a/index1.html
+++ b/index1.html
@@ -251,8 +251,8 @@
     <!-- Features Section -->
     <div class="features">
         <div class="container">
-            <p><strong>Design&Dine</strong> helps you create personalized meal plans based on what you already have in your kitchen, and lets you save your favorites and build your shopping list with ease.</p>
-            <a href="gen-meals.html" class="cta-btn">Generate Your Meal Plan</a>
+            <p><strong>Design&Dine</strong> helps you whip up delicious meals using the ingredients you already have in your kitchen. Save your favorite creations and build a shopping list with ease.</p>
+            <a href="gen-meals.html" class="cta-btn">Get Started!</a>
         </div>
     </div>
 
