--- a/index1.html
+++ b/index1.html
@@ -252,7 +252,7 @@
     <div class="features">
         <div class="container">
             <p><strong>Design&Dine</strong> helps you whip up delicious meals using the ingredients you already have in your kitchen. Save your favorite creations and build a shopping list with ease.</p>
-            <a href="gen-meals.html" class="cta-btn">Get Started!</a>
+            <a href="gen-meals.html" class="cta-btn">Discover Your Next Meal!</a>
         </div>
     </div>
 
