--- a/saved.html
+++ b/saved.html
@@ -12,8 +12,11 @@
             line-height: 1.6;
             display: flex;
             flex-direction: column;
-            min-height: 100vh;
-            margin: 0;
+            margin: 0
+
+            font-family: 'Poppins', sans-serif;
+            color: #333;
+
         }
 
         .container {
