--- a/saved.html
+++ b/saved.html
@@ -116,6 +116,7 @@
             text-align: center;
             padding: 20px 0;
             width: 100%;
+            margin-top: auto; 
         }
 
         footer a {
