--- a/shop_list.html
+++ b/shop_list.html
@@ -138,6 +138,7 @@
             text-align: center;
             padding: 20px 0;
             width: 100%;
+            margin-top: auto; 
         }
 
         footer a {
