--- a/saved.html
+++ b/saved.html
@@ -18,10 +18,7 @@
             line-height: 1.6;
             display: flex;
             flex-direction: column;
-            margin: 0
-
-            font-family: 'Poppins', sans-serif;
-            color: #333;
+            margin: 0; 
 
         }
 
