--- a/about1.html
+++ b/about1.html
@@ -288,7 +288,7 @@
         </div>
         <div class="feature">
             <div class="feature-icon">❤️</div>
-            <h3>Save You Favorites</h3>
+            <h3>Save Your Favorites</h3>
             <p>Keep track of the recipes that catch your eye. Save your favorite dishes and easily revisit them whenever you're ready to cook!</p>
         </div>
         <div class="feature">
