--- a/saved.html
+++ b/saved.html
@@ -11,13 +11,22 @@
             box-sizing: border-box;
         }
 
-        body {
+         body {
             font-family: 'Poppins', sans-serif;
             background-color: #faf3e0; /* Light Beige */
             color: #333;
             line-height: 1.6;
-
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+            margin: 0;
         }
+        html, body {
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+        }
+        
 
         .container {
             width: 80%;
